@@ -40,6 +40,8 @@ Extensions
 Other Changes
 =============
 
+* Pyreverse - Show class has-a relationships inferred from type-hints
+
 * Performance of the Similarity checker has been improved.
 
 * Added ``time.clock`` to deprecated functions/methods for python 3.3
