@@ -3,10 +3,12 @@ charset="utf-8"
 rankdir=BT
 "0" [label="{Ancestor|attr : str\lcls_member\l|get_value()\lset_value(value)\l}", shape="record"];
 "1" [label="{DoNothing|\l|}", shape="record"];
-"2" [label="{Interface|\l|get_value()\lset_value(value)\l}", shape="record"];
-"3" [label="{Specialization|TYPE : str\lrelation\ltop : str\l|}", shape="record"];
-"3" -> "0" [arrowhead="empty", arrowtail="none"];
-"0" -> "2" [arrowhead="empty", arrowtail="node", style="dashed"];
+"2" [label="{DoNothing2|\l|}", shape="record"];
+"3" [label="{Interface|\l|get_value()\lset_value(value)\l}", shape="record"];
+"4" [label="{Specialization|TYPE : str\lrelation\lrelation2\ltop : str\l|}", shape="record"];
+"4" -> "0" [arrowhead="empty", arrowtail="none"];
+"0" -> "3" [arrowhead="empty", arrowtail="node", style="dashed"];
 "1" -> "0" [arrowhead="diamond", arrowtail="none", fontcolor="green", label="cls_member", style="solid"];
-"1" -> "3" [arrowhead="diamond", arrowtail="none", fontcolor="green", label="relation", style="solid"];
+"1" -> "4" [arrowhead="diamond", arrowtail="none", fontcolor="green", label="relation", style="solid"];
+"2" -> "4" [arrowhead="diamond", arrowtail="none", fontcolor="green", label="relation2", style="solid"];
 }
